--- a/r-tech/src/components/HotProduct/HotProduct.module.css
+++ b/r-tech/src/components/HotProduct/HotProduct.module.css
@@ -224,8 +224,10 @@
     }
 
     .HotImage {
-        max-width: 300px;
-        margin: auto;
+        width: 100%;
+        max-width: 100%;
+        margin:0 auto;
+        height: auto;
     }
 
     .HotWrapper h1 {
@@ -256,7 +258,8 @@
 
     .setContainer {
         width: 320px;
-        margin-left: 50px;
+        margin: auto;
+        height: auto;
     }
 
     .setContainer h5 {
