--- a/r-tech/src/pages/products/coller.module.css
+++ b/r-tech/src/pages/products/coller.module.css
@@ -1,6 +1,8 @@
 .collingBanner {
     width: 100%;
     margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
 }
 
 .collingBanner img {
@@ -14,6 +16,7 @@
 
 .collerHeading {
     position: absolute;
+    height: 100%;
     inset: 0;
     display: flex;
     flex-direction: column;
@@ -296,13 +299,17 @@
   .collingWrapper h2 { font-size: 22px; }
 
   .collingContainer {
+    width: 100%;
     gap: 16px;
     padding: 0 16px;
+    margin: auto;
   }
 
   .coolingProduct {
     width: 100%;
-    max-width: 420px;
+    max-width: 100%;
+    padding: 16px 0;
+    margin: auto;
   }
 
   .coolingProduct img {
@@ -310,12 +317,11 @@
   }
 
   .collingCard {
-    height: auto;
+    height: 130px;
     position: relative;
-    top: 1px;
-    left: 23PX;
-    width: 355px;
-    padding: 14px 10px;
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
   }
 
   .coolingHot h1 {
@@ -327,6 +333,8 @@
   .collingContainerHot {
     grid-template-columns: 1fr;
     padding: 16px;
+    width: 100%;
+    margin: auto;
   }
 
   .hotIMage {
@@ -334,7 +342,7 @@
     max-width: 320px;
     height: auto;
     padding: 16px;
-    margin-bottom: 40px;
+    margin: auto;
   }
 
   .hotIMage img {
@@ -342,21 +350,24 @@
   }
 
   .newProductWrapper h1 {
-    font-size: 28px;
+    font-size: 32px;
     top: 0;
   }
 
   .newProduct {
     grid-template-columns: 1fr;
+    width: 100%;
     padding: 0 16px;
+    margin: auto;
+    gap: 30px;
   }
 
   .newCollingIMage {
     width: 100%;
-    max-width: 320px;
+    max-width: 100%;
+    margin: auto;
     height: auto;
-    padding: 16px;
-    margin-left: 10%;
+    margin-bottom: 30px;
   }
 
   .newCollingIMage img {
