--- a/r-tech/src/pages/products/desktop.module.css
+++ b/r-tech/src/pages/products/desktop.module.css
@@ -268,17 +268,16 @@
 
   .casesContainer {
     grid-template-columns: 1fr;
-    margin-left: 0;
+    margin: auto;
     padding: 0 16px;
     justify-items: center;
   }
 
   .casesImages {
     width: 100%;
-    max-width: 380px;
+    max-width: 100%;
     height: auto;
-    padding: 16px;
-    margin-left: 0;
+    margin: auto;
   }
   .casesImages a{
     position: relative;
@@ -290,8 +289,12 @@
   }
 
   .casesImages p {
-    margin-top: 10px;
-    padding-bottom: 0;
+    font-size: 13px;
+  }
+
+  .casesImages a {
+    position: relative;
+    top: -15px;
   }
 
   .desktopsWrapper p {
@@ -302,26 +305,29 @@
 
   .desktopContainer {
     grid-template-columns: 1fr;
-    padding: 0 16px;
+    gap: 25px;
+    width: 100%;
+    margin: auto;
+    padding: 16px 0;
     justify-items: center;
-    width: 300px;
-    margin-left: 13%;
+
   }
 
   .desktopsImages {
     width: 100%;
-    max-width: 360px;
-    height: 360px;
-    padding: 16px;
-  }
-
-  .desktopsImages a {
-    position: relative;
-    top: -70px;
+    max-width: 100%;
+    margin: auto;
+    padding: 16px 0;
+    height: 320px;
   }
 
   .desktopsImages img {
     height: 200px;
+  }
+
+  .desktopsImages a {
+    position: relative;
+    bottom: 80px;
   }
 
   .hotProducts {
@@ -329,9 +335,14 @@
     gap: 16px;
   }
 
+  .desktopsImages h4 {
+    font-size: 22px;
+  }
+
   .hotItem {
     width: 100%;
     max-width: 380px;
+    margin: auto;
   }
 
   .hotItem img {
